--- a/views/home.hbs
+++ b/views/home.hbs
@@ -52,7 +52,7 @@
 
             canvas {
                 position: absolute;
-                z-index: 11;
+                /* z-index: 11; */
                 cursor: copy;
             }
 
@@ -140,7 +140,6 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                z-index: 11;
                 font-size: 80%;
                 font-weight: bold;
                 height: 1.7rem;
@@ -289,7 +288,7 @@
 
                 left: 50%;
                 transform: translate(-50%, 0);
-                z-index: 10;
+                z-index: 11;
 
             }
 
@@ -734,7 +733,7 @@
 
           </div>
 
-          <div class="carry-menu d-flex align-items-center order-md-2 order-1">
+          <div class="carry-menu d-flex align-items-center order-md-2 order-1 pt-md-3">
 
               <div class="d-md-block mx-auto d-flex justify-content-center col-md-12 col-11 mx-2 text-center align-items-center">
 
