--- a/views/home.hbs
+++ b/views/home.hbs
@@ -512,10 +512,11 @@
 
             .blackish-overlay {
               background-color: black;
-              opacity: 0.8;
+              opacity: 0;
               display: none;
               position: absolute;
               z-index: 8;
+              top: 0px;
             }
 
             #dialog-final {
@@ -600,6 +601,8 @@
 
             </div>
 
+            <div class="blackish-overlay"></div>
+
         </div>
 
         <div id="dialog-uploadImage" class="container dialog d-flex align-items-center justify-content-center">
@@ -682,8 +685,6 @@
         </div>
 
         <div id="dialog-final" class="pt-0 d-flex flex-wrap align-items-stretch justify-content-center">
-
-          <div class="blackish-overlay"></div>
 
           <div class="position-fixed saving-div" style="z-index: 12">
             <div class="position-absolute text-right" style="right:20px; bottom:10px; z-index: 12">
@@ -879,9 +880,9 @@
 
         <canvas id="canvas-for-storage" style="top: -9999px; left: -9999px; opacity: 0"></canvas>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-        <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.7/jquery.validate.min.js"></script>
@@ -890,13 +891,13 @@
 
         <script type="text/javascript">
 
-        $(document).ajaxStop(function() {
-          $('.saving-done').removeClass('d-none');
-        });
+            $(document).ajaxStop(function() {
+              $('.saving-done').removeClass('d-none');
+            });
 
-        $( document ).ajaxStart(function(e) {
-          $('.saving-done').addClass('d-none');
-        });
+            $( document ).ajaxStart(function(e) {
+              $('.saving-done').addClass('d-none');
+            });
 
             var canvas = document.getElementById('myCanvas');
             var context = canvas.getContext('2d');
@@ -1051,7 +1052,7 @@
                     appendTo: ".btn-container",
                     show: {
                         effect: "fade",
-                        duration: 300
+                        duration: 150
                     },
                 })
 
@@ -1069,7 +1070,7 @@
                     appendTo: ".btn-container",
                     show: {
                         effect: "fade",
-                        duration: 500
+                        duration: 100
                     }
                 });
 
@@ -1226,7 +1227,7 @@
 
                     let circleNo = createEditablePopover.DOMelem;
 
-                    console.log('problem doesnot lies here',circleNo);
+                    console.log('problem doesnot lie here',circleNo);
 
                     $(circleNo).data({
                         editFlag: true
@@ -2645,7 +2646,11 @@ border-top-color: #343a40;
 
             $('.open-btn').click(function() {
 
-                $('.btn-container').hide();
+                $('.blackish-overlay').css({
+                  height: $('body').height(),
+                  width: $('body').width(),
+                  display: 'block',
+                });
 
                 $("#dialog-uploadImage").dialog('open');
 
@@ -2748,12 +2753,12 @@ border-top-color: #343a40;
                 dataforimageexists.data = JSON.parse(imageData);
               }
 
-              $('.blackish-overlay').css({
-                height: $('body').height(),
-                width: $('body').width(),
-                display: 'block',
-              })
-              $("#dialog-final").dialog('open');
+              $('.blackish-overlay').css({display: 'block',height: $('body').height(),width: $('body').width()}).animate({
+                opacity:0.7
+              }, 50, function() {
+                console.log(this);
+                $("#dialog-final").dialog('open');
+              });
 
               $('.image').attr({
                 src: $(this).find('.card-image-top').attr('data-image'),
