--- a/views/home.hbs
+++ b/views/home.hbs
@@ -760,7 +760,7 @@
           <div class="carry-menu d-flex align-items-center order-md-2 order-1 pt-md-3">
 
             <div class="menu-caption position-absolute" style="right:30%;z-index:12;top:10px;">
-              hello
+              Text Position
             </div>
 
               <div class="d-md-block mx-auto d-flex justify-content-center col-md-12 col-11 mx-2 text-center align-items-center">
