--- a/views/home.hbs
+++ b/views/home.hbs
@@ -124,11 +124,6 @@
                 animation-delay: .4s;
             }
 
-            .img-block {
-                background: transparent;
-                z-index: 10;
-            }
-
             .bg-shadow {
 
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -515,28 +510,10 @@
                 font-size: 80%;
             }
 
-            .blackish-overlay {
-              background-color: black;
-              opacity: 0;
-              display: none;
-              position: absolute;
-              z-index: 8;
-              top: 0px;
-
-            }
-
-            #dialog-final {
-              /* z-index: 10; */
-            }
-
             #for-printing {
-              /* transform: translate(-50%,0); */
               overflow: hidden;
             }
 
-            .carry-menu {
-              z-index: 12;
-            }
 
             #dialog-uploadImag {
               position: absolute;
@@ -545,13 +522,54 @@
               z-index: 11;
             }
 
+            .blackish-overlay {
+              background-color: black;
+              opacity: 0;
+              display: none;
+              position: absolute;
+              top: 0px;
+            }
+
+            .o-active {
+              z-index: 11 !important;
+            }
+
+            .o-inactive {
+              z-index: 9;
+            }
+
+            .img-block {
+                background: transparent;
+                z-index: 10;
+            }
+
+            .carry-menu {
+              z-index: 12;
+            }
+
             .menu-caption {
               font-family: Avenir-Black;
       				font-size: 61px;
       				color: #FFFFFF;
       				letter-spacing: 0.08px;
-      				padding-left: 20px;
-      				padding-top: 30px;
+              white-space: nowrap;
+              right:200%;
+              top:0px;
+            }
+
+            .menu-btn>svg {
+              cursor: pointer;
+            }
+
+            @media(max-width:767px){
+
+              .menu-caption {
+
+                left:0%;
+                top:100%;
+                white-space: normal;
+              }
+
             }
 
         </style>
@@ -623,7 +641,7 @@
 
             </div>
 
-            <div class="blackish-overlay"></div>
+            <div class="blackish-overlay o-inactive"></div>
 
         </div>
 
@@ -759,14 +777,14 @@
 
           <div class="carry-menu d-flex align-items-center order-md-2 order-1 pt-md-3">
 
-            <div class="menu-caption position-absolute" style="right:30%;z-index:12;top:10px;">
-              Text Position
-            </div>
-
               <div class="d-md-block mx-auto d-flex justify-content-center col-md-12 col-11 mx-2 text-center align-items-center">
 
+                <div class="menu-caption position-absolute d-none">
+
+                </div>
+
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Text Position." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2728 27.5628L16.3857 10.3762C16.3983 10.3342 16.4373 10.3042 16.4801 10.3042H21.4449C21.4888 10.3042 21.5267 10.3332 21.5384 10.3762L26.7262 27.5608C26.7359 27.5938 26.7311 27.6278 26.7145 27.6508C26.6941 27.6788 26.6639 27.6948 26.6318 27.6948H22.5615C22.5177 27.6948 22.4788 27.6658 22.4671 27.6218L21.334 23.7472C21.2532 23.4722 21.0059 23.2821 20.7255 23.2821H17.0389C16.7536 23.2821 16.5034 23.4772 16.4275 23.7602L15.3839 27.6198C15.3722 27.6638 15.3323 27.6948 15.2885 27.6948H11.3673C11.3361 27.6948 11.305 27.6788 11.2884 27.6558C11.2699 27.6288 11.2641 27.5938 11.2728 27.5628ZM11.3673 29H15.2885C15.9009 29 16.4431 28.5759 16.6076 27.9688L17.5217 24.5873H20.2534L21.2502 27.9958C21.4216 28.5869 21.9609 29 22.5616 29H26.6318C27.063 29 27.4748 28.786 27.7357 28.4259C27.9898 28.0689 28.0667 27.6018 27.9401 27.1767L22.7514 9.98915C22.5723 9.39706 22.0475 9 21.4449 9H16.4801C15.8746 9 15.3479 9.40006 15.1707 9.99515L10.0589 27.1837C9.93329 27.6058 10.0112 28.0709 10.2682 28.4319C10.5271 28.788 10.9379 29 11.3673 29Z" fill="black"/>
                   <path d="M18.4204 20H19.5794C19.7121 20 19.8372 19.9129 19.9158 19.7647C19.9958 19.6174 20.0203 19.4261 19.9829 19.2492L19.4601 16.7688C19.4369 16.6565 19.4124 16.5424 19.3886 16.4248C19.3364 16.1706 19.1604 15.9991 18.978 16C18.7878 16.0036 18.6234 16.185 18.577 16.4419C18.5512 16.5784 18.5267 16.7122 18.5003 16.8406L18.0156 19.2564C17.9801 19.4324 18.0059 19.6219 18.0852 19.7683C18.1645 19.9138 18.2889 20 18.4204 20" stroke="black"/>
@@ -774,14 +792,14 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Marker Settings." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="black"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M9.19246 25.3488C9.21135 25.3535 9.23024 25.3582 9.24834 25.3621L10.7799 23.2433C10.8059 23.2237 10.8311 23.201 10.8531 23.1752L12.6035 21.1746C12.7239 21.3945 12.8915 21.5612 13.1032 21.6724C13.8761 22.0755 14.8386 21.4736 14.9464 21.4039C14.9645 21.3914 14.9819 21.3781 14.9992 21.364C15.5713 20.8693 15.8366 20.802 15.9106 20.7942C16.0302 20.9859 16.005 21.7295 15.8547 22.3737C15.8476 22.4034 15.8429 22.4332 15.8413 22.4629C15.798 23.3725 16.0349 24.0636 16.5449 24.5152C17.1808 25.078 18.0269 25.0522 18.3063 25.0256C19.2838 25.1923 19.9583 25.5445 20.3116 26.0744C20.6524 26.5855 20.6005 27.146 20.5714 27.3268L19.4372 29.127C19.4365 29.1278 19.4357 29.1278 19.4349 29.1286C18.965 29.5685 18.1709 30.5923 17.4374 29.9583C17.1131 29.6781 17.0942 29.1129 16.7165 28.8265C16.3843 28.5752 16.1278 28.5838 15.7272 28.5736C15.484 28.6621 15.2392 28.6613 14.9945 28.5697C14.693 28.6277 14.5238 28.5181 14.4845 28.241C14.3058 28.0625 14.3082 27.8606 14.1035 27.6813C13.81 27.4246 13.4558 27.362 13.0812 27.3596C12.8341 27.3581 12.5405 27.4849 12.2997 27.4457C11.2513 27.2751 11.7904 27.009 11.3324 26.6419C10.5666 26.0274 9.83389 26.274 9.0382 26.6513C9.02167 26.6591 9.00514 26.6669 8.98862 26.6748C8.98626 26.6591 8.98468 26.6442 8.98311 26.6294C8.92015 26.1965 8.91228 25.777 9.19246 25.3488ZM17.3154 16.1753L24.1248 21.0321L21.3497 25.9163C21.3222 25.8552 21.2923 25.7934 21.2584 25.7324C21.2254 25.6705 21.1884 25.6087 21.1482 25.5476C21.0821 25.4459 21.0082 25.3496 20.9279 25.2572C20.8507 25.168 20.7681 25.0843 20.6792 25.0036C20.2746 24.6373 19.7418 24.3626 19.0839 24.1849C18.8651 24.1246 18.6313 24.0761 18.385 24.0378C18.3598 24.0339 18.3346 24.0323 18.3094 24.0323C18.2811 24.0323 18.2528 24.0346 18.2252 24.0393C18.2252 24.0393 18.2221 24.0401 18.2166 24.0409C18.2055 24.0417 18.1851 24.044 18.1575 24.0464C18.1434 24.0472 18.1276 24.0479 18.1103 24.0487C18.0922 24.0495 18.0733 24.0503 18.0529 24.0503C17.9907 24.0511 17.9159 24.0487 17.8341 24.0393C17.6814 24.0205 17.5067 23.9775 17.3492 23.8859C17.2973 23.8554 17.2461 23.8186 17.1989 23.7763C17.1407 23.7247 17.0895 23.6644 17.0455 23.5963C16.9345 23.4257 16.8707 23.1995 16.844 22.9294C16.8385 22.8762 16.8298 22.8261 16.8282 22.7682C16.8267 22.7001 16.8274 22.6296 16.8306 22.5569C16.8306 22.5553 16.8298 22.5545 16.8306 22.5529C16.8337 22.5373 16.8385 22.5169 16.8416 22.4997C16.8589 22.4222 16.8778 22.3299 16.8967 22.2234C16.8975 22.2179 16.8991 22.2117 16.8999 22.2054C16.9054 22.1741 16.9101 22.1397 16.9148 22.1076C16.9211 22.07 16.9274 22.0356 16.9329 21.9949C16.9841 21.6411 16.9927 21.3452 16.9738 21.0979C16.9644 20.9703 16.9471 20.8552 16.9243 20.7527C16.8574 20.4505 16.7432 20.251 16.6307 20.1195C16.5551 20.0326 16.4804 19.9762 16.4206 19.9402C16.2545 19.84 16.0782 19.8001 15.8995 19.8056C15.8106 19.8079 15.7201 19.8212 15.6304 19.8447C15.2251 19.9457 14.8205 20.229 14.4868 20.5046C14.449 20.5351 14.4128 20.5656 14.3782 20.5961C14.3514 20.6118 14.3215 20.629 14.2893 20.6454C14.1933 20.6963 14.0744 20.7464 13.9579 20.7816C13.9194 20.7934 13.8808 20.8028 13.8438 20.8106C13.806 20.8184 13.7706 20.8239 13.736 20.8263C13.7021 20.8286 13.6699 20.8278 13.6408 20.8239C13.6116 20.8192 13.5857 20.8122 13.5636 20.7996C13.4881 20.7613 13.407 20.6141 13.3732 20.3277L17.3154 16.1753ZM21.9463 13.9532C22.025 13.9172 22.0927 13.8624 22.1431 13.7919L26.6834 7.50665C26.7881 7.42525 27.0832 7.21235 27.4469 7.08633C27.5374 7.05502 27.6326 7.02919 27.7302 7.01119C27.7806 7.00258 27.8309 6.99632 27.8813 6.99319C28.1292 6.9744 28.3858 7.02215 28.6219 7.18965C28.6329 7.19669 28.6431 7.20296 28.6542 7.20922C28.6557 7.21078 28.6573 7.21157 28.6589 7.21313C28.6612 7.2147 28.6636 7.21704 28.666 7.21861C28.6715 7.22252 28.6762 7.22565 28.6801 7.22879C28.6896 7.23661 28.6998 7.24444 28.7108 7.25305C28.7966 7.31488 28.8667 7.38533 28.9257 7.46047C28.98 7.53092 29.0233 7.60606 29.0587 7.68511C29.15 7.88862 29.183 8.11248 29.1807 8.32695C29.1807 8.32929 29.1807 8.33086 29.1807 8.33321C29.1791 8.42244 29.1728 8.50854 29.1626 8.59229C29.1461 8.7277 29.1201 8.85215 29.0949 8.95391C29.0689 9.05566 29.043 9.1355 29.0272 9.18325L24.4876 15.4677C24.4294 15.5476 24.3971 15.6438 24.3947 15.7432L24.3003 19.9457L20.2644 17.0668L18.2457 15.6274L21.9463 13.9532ZM8.13862 27.3847C8.18112 27.7588 8.51089 27.9647 8.86269 27.7988C9.17672 27.65 9.99208 27.0818 10.3415 27.1914C10.7516 27.3197 10.7043 27.6125 10.9428 27.8528C11.2742 28.1862 11.4977 28.3733 11.9966 28.4132C12.2997 28.4367 12.6365 28.2762 12.9285 28.3224C13.7572 28.4523 13.5699 28.7873 13.9131 29.2178C14.2058 29.5865 14.5388 29.7055 15.0055 29.6906C15.4273 29.6765 15.5619 29.527 15.9893 29.7321C16.4449 29.9497 16.4095 30.1853 16.6897 30.5602C16.9416 30.8991 17.2123 31.1355 17.6491 31.2013C18.6416 31.35 19.4695 30.4099 20.1157 29.8057C20.1668 29.7571 20.2022 29.7055 20.2266 29.653C20.2392 29.6577 20.251 29.664 20.2644 29.6679L21.4583 27.7745C21.4851 27.7314 21.5048 27.6853 21.5174 27.6375C21.5182 27.6344 21.5205 27.625 21.5237 27.6125L25.2054 21.1315C25.2227 21.101 25.2353 21.0697 25.2463 21.0368C25.2479 21.0305 25.2495 21.0235 25.2503 21.0165C25.2597 20.9836 25.2652 20.9507 25.2668 20.917C25.2668 20.9116 25.2691 20.9061 25.2691 20.9006L25.3809 15.9178L29.8701 9.70297C29.8929 9.67166 29.9126 9.63722 29.9268 9.60044C29.9614 9.51669 30.7414 7.55048 29.3326 6.4852C29.3271 6.47972 29.3208 6.47502 29.3153 6.47033C29.298 6.45624 29.2806 6.4445 29.261 6.43041C29.2507 6.42258 29.2413 6.41554 29.2311 6.40927C29.2177 6.3991 29.2051 6.38971 29.1909 6.38031C29.1775 6.37092 29.1642 6.36231 29.15 6.35448C27.6869 5.37295 26.0664 6.73489 25.9971 6.79359C25.9672 6.81864 25.9405 6.8476 25.9177 6.87891L21.4158 13.111L17.1383 15.0466C17.047 15.0678 16.9605 15.1147 16.892 15.1867L12.5853 19.7234C12.5515 19.7469 12.5177 19.7719 12.4901 19.804L10.1999 22.4214C10.1463 22.4551 10.0991 22.4981 10.0598 22.5522L8.48492 24.7328C8.44163 24.7657 8.39992 24.8056 8.36529 24.8581C8.31807 24.9293 8.27872 24.9997 8.24172 25.0686L8.20552 25.1203C8.20867 25.1203 8.21182 25.1211 8.21497 25.1218C7.84742 25.867 8.04182 26.53 8.13862 27.3847Z" fill="white"/>
                   </svg>
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Download Image." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M8 30H30V27H24.6541L19 28.078L13.6216 27H8V30Z" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2102 5L21.6445 8.82461V15.9302H27L19 24L11 16.0468H16.2102V5Z" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -789,7 +807,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Undo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M29 19.5L10.0373 19.5" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M17 28L10 19.4992L17 11" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -797,7 +815,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Redo." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M10 19.5H28.9627" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M22 11L29 19.5008L22 28" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -805,7 +823,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Share." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path d="M12.934 20.6772L9.59242 23.4811" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M16.117 21.9225L9.98869 27.0648" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
@@ -815,7 +833,7 @@
                 </div>
 
                 <div class="menu-btn px-md-3 px-1 py-md-1 py-2 my-0" style="line-height:1px">
-                  <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <svg name="Close." width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 38C29.4934 38 38 29.4934 38 19C38 8.50659 29.4934 0 19 0C8.50659 0 0 8.50659 0 19C0 29.4934 8.50659 38 19 38Z" fill="white"/>
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M19 20.039L14.25 24.789C13.8351 25.204 13.3056 25.3472 13.0674 25.109C12.8292 24.8708 12.9724 24.3413 13.3873 23.9264L18.1373 19.1764L13.2318 14.2708C12.8168 13.8559 12.6736 13.3264 12.9118 13.0882C13.15 12.85 13.6795 12.9932 14.0944 13.4082L19 18.3137L23.9056 13.4082C24.3205 12.9932 24.85 12.85 25.0882 13.0882C25.3264 13.3264 25.1832 13.8559 24.7682 14.2708L19.8627 19.1764L24.6127 23.9264C25.0276 24.3413 25.1708 24.8708 24.9326 25.109C24.6944 25.3472 24.1649 25.204 23.75 24.789L19 20.039Z" fill="black"/>
                   </svg>
@@ -3422,6 +3440,13 @@ border-top-color: #343a40;
                   console.log(e)
                 }
             });
+
+            $('.menu-btn>svg').on('mouseenter mouseleave',function(){
+              let label = $(this).attr('name');
+              $('.menu-caption').html(label).toggleClass('d-none d-block');
+              $('.blackish-overlay').toggleClass('o-active o-inactive');
+              console.log($(this).find('path').attr('fill'));
+            })
 
         </script>
 
